// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App matches initial snapshot 1`] = `
<div
  id="parent-window"
>
  <div
    id="map-element"
  />
  <div
    id="cardtable-container"
  >
    <Card
      id="welcome-card"
      tag="div"
    >
      <CardBody
        tag="div"
      >
        <Logo
          subtitle="Find great playgrounds near great coffee!"
        />
        <CardText
          tag="p"
        >
          When would you like to do your family activity?
        </CardText>
        <Button
          className="button date-btn"
          color="primary"
          name="today"
          onClick={[Function]}
          tag="button"
        >
          Today
        </Button>
        <Button
          className="button date-btn"
          color="primary"
          name="tomorrow"
          onClick={[Function]}
          tag="button"
        >
          Tomorrow
        </Button>
        <About />
      </CardBody>
    </Card>
  </div>
</div>
`;

exports[`App matches snapshot after user clicks a date for activity 1`] = `
<App>
  <div
    id="parent-window"
  >
    <div
      id="map-element"
    />
    <div
      id="cardtable-container"
    >
      <Card
        id="welcome-card"
        tag="div"
      >
        <div
          className="card"
          id="welcome-card"
        >
          <CardBody
            tag="div"
          >
            <div
              className="card-body"
            >
              <Logo>
                <CardTitle
                  tag="div"
                >
                  <div
                    className="card-title"
                  >
                    <div
                      id="cafe-and-kids"
                    >
                      <a
                        href="/"
                      >
                        Cafe and Kids
                      </a>
                    </div>
                  </div>
                </CardTitle>
              </Logo>
              <CardText
                tag="p"
              >
                <p
                  className="card-text"
                >
                  Where should it be near?
                </p>
              </CardText>
              <Input
                id="locationTextBox"
                name="location"
                onChange={[Function]}
                placeholder=""
                spellCheck="false"
                type="text"
              >
                <input
                  className="form-control"
                  id="locationTextBox"
                  name="location"
                  onChange={[Function]}
                  placeholder=""
                  spellCheck="false"
                  type="text"
                />
              </Input>
              <Button
                className="button"
                color="primary"
                name="location"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button btn btn-primary"
                  name="location"
                  onClick={[Function]}
                  type="button"
                >
                  Submit
                </button>
              </Button>
              <Button
                className="button"
                color="primary"
                name="useCurrentLocation"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button btn btn-primary"
                  name="useCurrentLocation"
                  onClick={[Function]}
                  type="button"
                >
                  Use current location
                </button>
              </Button>
              <Button
                className="button"
                color="secondary"
                name="backButton"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button btn btn-secondary"
                  name="backButton"
                  onClick={[Function]}
                  type="button"
                >
                  Back
                </button>
              </Button>
            </div>
          </CardBody>
        </div>
      </Card>
    </div>
  </div>
</App>
`;

exports[`App matches snapshot after user selects a location 1`] = `
<App>
  <div
    id="parent-window"
  >
    <div
      id="map-element"
    />
    <div
      id="cardtable-container"
    >
      <Card
        id="welcome-card"
        tag="div"
      >
        <div
          className="card"
          id="welcome-card"
        >
          <CardBody
            tag="div"
          >
            <div
              className="card-body"
            >
              <Logo>
                <CardTitle
                  tag="div"
                >
                  <div
                    className="card-title"
                  >
                    <div
                      id="cafe-and-kids"
                    >
                      <a
                        href="/"
                      >
                        Cafe and Kids
                      </a>
                    </div>
                  </div>
                </CardTitle>
              </Logo>
              <CardText
                tag="p"
              >
                <p
                  className="card-text"
                >
                  How many 
                  <b>
                    minutes
                  </b>
                   should it take to get there?
                </p>
              </CardText>
              <Input
                id="proximityMinutesInputBox"
                name="proximityMinutes"
                onChange={[Function]}
                type="select"
                value=""
              >
                <select
                  className="form-control"
                  id="proximityMinutesInputBox"
                  name="proximityMinutes"
                  onChange={[Function]}
                  value=""
                >
                  <option>
                    10
                  </option>
                  <option>
                    15
                  </option>
                  <option>
                    20
                  </option>
                  <option>
                    30
                  </option>
                  <option>
                    45
                  </option>
                  <option>
                    60
                  </option>
                  <option>
                    90
                  </option>
                </select>
              </Input>
              <br />
              How will you be travelling? 
              <br />
              <Button
                className="button transport-btn"
                color="primary"
                name="walk"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button transport-btn btn btn-primary"
                  name="walk"
                  onClick={[Function]}
                  type="button"
                >
                  Walk
                </button>
              </Button>
              <Button
                className="button transport-btn"
                color="primary"
                name="cycle"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button transport-btn btn btn-primary"
                  name="cycle"
                  onClick={[Function]}
                  type="button"
                >
                  Cycle
                </button>
              </Button>
              <br />
              <Button
                className="button transport-btn"
                color="primary"
                name="car"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button transport-btn btn btn-primary"
                  name="car"
                  onClick={[Function]}
                  type="button"
                >
                  Car
                </button>
              </Button>
              <Button
                className="button transport-btn"
                color="primary"
                name="publicTransport"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button transport-btn btn btn-primary"
                  name="publicTransport"
                  onClick={[Function]}
                  type="button"
                >
                  Public transport
                </button>
              </Button>
              <Button
                className="button"
                color="secondary"
                name="backButton"
                onClick={[Function]}
                tag="button"
              >
                <button
                  aria-label={null}
                  className="button btn btn-secondary"
                  name="backButton"
                  onClick={[Function]}
                  type="button"
                >
                  Back
                </button>
              </Button>
            </div>
          </CardBody>
        </div>
      </Card>
    </div>
  </div>
</App>
`;

exports[`App matches snapshot after user selects distance and travel method 1`] = `
<App>
  <div
    id="parent-window"
  >
    <div
      id="map-element"
    />
    <div
      id="cardtable-container"
    >
      <Card
        id="welcome-card"
        tag="div"
      >
        <div
          className="card"
          id="welcome-card"
        >
          <CardBody
            tag="div"
          >
            <div
              className="card-body"
            >
              <Logo>
                <CardTitle
                  tag="div"
                >
                  <div
                    className="card-title"
                  >
                    <div
                      id="cafe-and-kids"
                    >
                      <a
                        href="/"
                      >
                        Cafe and Kids
                      </a>
                    </div>
                  </div>
                </CardTitle>
              </Logo>
              <CardText
                tag="p"
              >
                <p
                  className="card-text"
                >
                  Weather is going to be fine for outdoor play!
                  <br />
                  Drag the map to update search results
                </p>
              </CardText>
              <div
                className="spacer"
              />
              <Spinner
                color="primary"
                tag="div"
                type="border"
              >
                <div
                  className="spinner-border text-primary"
                  role="status"
                >
                  <span
                    className="sr-only"
                  >
                    Loading...
                  </span>
                </div>
              </Spinner>
            </div>
          </CardBody>
        </div>
      </Card>
    </div>
  </div>
</App>
`;
